--- a/index.html
+++ b/index.html
@@ -112,6 +112,10 @@
       <div class="wrapper-convert-item-body" id="wrapper-convert-item-body-HSB" style="display:none">
         <form id="form-convert-HSB">
           <div class="hue-range-selector">
+            <label id="hueDirectionLabel">
+              <input type="checkbox" id="hueDirectionToggle" checked>
+              Reverse
+            </label>
             <canvas id="hueCanvas" width="220" height="220"></canvas>
             <div class="hue-inputs">
               <label>Use H <input type="checkbox" id="ignoreHue" checked></label>
