--- a/index.html
+++ b/index.html
@@ -102,6 +102,10 @@
       </div>
       <div class="wrapper-convert-item-body" id="wrapper-convert-item-body-CMYK" style="display:none">
         <form id="form-convert-CMYK">
+            <label id="modLabel">
+              <input type="checkbox" id="mod">
+              Perceptually accurate brightness
+            </label>
           <label><span class="text-range">C*:</span> <input type="range" name="c_mul" min="0" max="2" step="0.01" value="1"> <input type="number" name="c_mul_num" min="0" max="2" step="0.01" value="1"></label><br>
           <label><span class="text-range">M*:</span> <input type="range" name="m_mul" min="0" max="2" step="0.01" value="1"> <input type="number" name="m_mul_num" min="0" max="2" step="0.01" value="1"></label><br>
           <label><span class="text-range">Y*:</span> <input type="range" name="y_mul" min="0" max="2" step="0.01" value="1"> <input type="number" name="y_mul_num" min="0" max="2" step="0.01" value="1"></label><br>
